--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{title}}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <!-- <link rel="stylesheet" href="../../static/css/style.css" /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
   </head>
   <body>
     <main class="main-wrapper">
@@ -16,10 +20,20 @@
       </section>
       <footer>
         <nav class="link-wrapper footer-nav">
-          <a href="/generator" class="nav-link link" k>Generator</a>
-          <a href="/vault" class="nav-link link">Vault</a>
-          <a href="{% url 'logout' %}" class="nav-link link">{% if user.is_authenticated %}Logout{% else %}Login{% endif %}</a
-          >
+          <a href="{% url 'vault' %}" class="nav-link link"
+            ><i class="bi bi-house"></i
+          ></a>
+          <a href="{% url 'generator' %}" class="nav-link link"
+            ><i class="bi bi-magic"></i
+          ></a>
+          {% if user.is_authenticated %}
+          <a href="{% url 'logout' %}" class="nav-link link"
+            ><i class="bi bi-box-arrow-right"></i
+          ></a>
+          {% else %}
+          <a href="{% url 'login' %}" class="nav-link link"
+            ><i class="bi bi-box-arrow-in-right"></i></a>
+          {% endif %}
         </nav>
         <p class="separator">|</p>
         <p class="copyright-text">&copy PRIVISA 2022</p>
