--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,12 +31,13 @@ body {
 }
 
 input {
-  padding-bottom: 4pt;
+  padding: 6pt 0;
   font-size: 12pt;
   background-color: transparent;
   border: 0;
-  border-bottom: 1pt solid var(--fg);
+  border-bottom: 2pt solid var(--fg);
   color: var(--fg);
+  opacity: 0.7;
 }
 
 input:hover {
@@ -46,6 +47,7 @@ input:hover {
 input:focus-within {
   outline: 0;
   border-bottom: 2pt solid var(--ac);
+  opacity: 1;
 }
 
 button {
@@ -66,10 +68,8 @@ button:hover {
   background-color: var(--bg);
   min-width: 540pt;
   max-width: 70vw;
-  width: -webkit-min-content;
   width: -moz-min-content;
   width: min-content;
-  min-height: -webkit-min-content;
   min-height: -moz-min-content;
   min-height: min-content;
   position: absolute;
@@ -100,6 +100,21 @@ button:hover {
 }
 .main-wrapper .content-wrapper form {
   margin: 10% 0;
+  display: grid;
+  border: 3pt solid;
+  padding: 24pt;
+  gap: 36pt;
+  justify-items: center;
+}
+.main-wrapper .content-wrapper form .form-inputs {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 12pt;
+  width: 100%;
+}
+.main-wrapper .content-wrapper form .button {
+  width: 100%;
 }
 .main-wrapper .content-wrapper .generator-form {
   display: grid;
@@ -145,7 +160,6 @@ button:hover {
   margin-bottom: 12pt;
 }
 .vault-table .vault-row a {
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
@@ -233,8 +247,8 @@ button.material-symbols-outlined {
 
 @media screen and (prefers-color-scheme: dark) {
   :root {
-    --fg: #e9c46a;
-    --bg: #1d3557;
-    --ac: #b3444f;
+    --fg: #73bda8;
+    --bg: #010711;
+    --ac: #cc6b49;
   }
 }/*# sourceMappingURL=style.css.map */
