--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -29,19 +29,22 @@ body {
 }
 
 input {
-  padding-bottom: 4pt;
+  padding: 6pt 0;
   font-size: 12pt;
   background-color: transparent;
   border: 0;
-  border-bottom: 1pt solid var(--fg);
+  border-bottom: 2pt solid var(--fg);
   color: var(--fg);
+  opacity: 0.7;
 }
+
 input:hover {
   border-bottom-color: var(--ac);
 }
 input:focus-within {
   outline: 0;
   border-bottom: 2pt solid var(--ac);
+  opacity: 1;
 }
 
 button {
@@ -91,6 +94,21 @@ button:hover {
 
     form {
       margin: 10% 0;
+      display: grid;
+      border: 3pt solid;
+      padding: 24pt;
+      gap: 36pt;
+      justify-items: center;
+      .form-inputs {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        gap: 12pt;
+        width: 100%;
+      }
+      .button{
+        width: 100%;
+      }
     }
     .generator-form {
       display: grid;
@@ -217,8 +235,8 @@ button.material-symbols-outlined {
 
 @media screen and (prefers-color-scheme: dark) {
   :root {
-    --fg: #e9c46a;
-    --bg: #1d3557;
-    --ac: #b3444f;
+    --fg: #73bda8;
+    --bg: #010711;
+    --ac: #cc6b49;
   }
 }
